--- a/src/main/resources/templates/fragments/scripts.html
+++ b/src/main/resources/templates/fragments/scripts.html
@@ -1,4 +1,6 @@
 <div th:fragment="scripts">
 
     <script th:src="@{/scripts/header.js}"></script>
+    <script th:src="@{/scripts/form.js}"></script>
+    <script th:src="@{/scripts/list.js}"></script>
 </div>
