--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -14,7 +14,7 @@
             <a th:href="@{/student/students}">Alunos</a>
           </li>
           <li>
-            <a th:href="@{/internshipOffer/offers}">Oportunidades</a>
+            <a th:href="@{/internshipOffer/offers}">Ofertas de Estágio</a>
           </li>
           <li>
             <a th:href="@{/company/companies}">Empresas</a>
