--- a/src/main/resources/templates/offers/list.html
+++ b/src/main/resources/templates/offers/list.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <meta th:insert="~{/fragments/custom-headfiles :: list-headfiles(title='Oportunidades')}">
+    <meta th:insert="~{/fragments/custom-headfiles :: list-headfiles(title='Ofertas')}">
 
 </head>
 
