--- a/src/main/resources/templates/offers/form.html
+++ b/src/main/resources/templates/offers/form.html
@@ -57,7 +57,7 @@
                         <label>Competências Necessárias (Selecione pelo menos uma):</label>
                         <div class="d-flex flex-wrap gap-3">
                             <label th:each="competence : ${necessarySkills}" class="competence-checkbox">
-                                <input type="checkbox" th:field="*{necessarySkills}" th:value="${competence.id}" />
+                                <input type="checkbox" th:field="*{necessarySkills}" th:value="${competence.id}" name="necessarySkills" />
                                 <span th:text="${competence.getDescription()}"></span>
                             </label>
                         </div>
@@ -66,7 +66,7 @@
                         <label>Competências Desejadas:</label>
                         <div class="d-flex flex-wrap gap-3">
                             <label th:each="competence : ${desirableSkills}" class="competence-checkbox">
-                                <input type="checkbox" th:field="*{desirableSkills}" th:value="${competence.id}"/>
+                                <input type="checkbox" th:field="*{desirableSkills}" th:value="${competence.id}" name="desirableSkills"/>
                                 <span th:text="${competence.getDescription()}"></span>
                             </label>
                         </div>
